--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -37,6 +37,7 @@
     padding: 10px 15px;
     border-radius: 5px;
     transition: 0.3s;
+    cursor: pointer;
   }
   
   #navbar a:hover, #logout:hover, #delete-account:hover {
